<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:paddingTop="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Welcome_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/welcome_label"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/type_login_data_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/type_data_login_label"
                android:textColor="@color/design_default_color_on_primary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="406dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ID"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/rounded_corners"
                android:drawableLeft="@drawable/ic_id"
                android:ems="10"
                android:hint="@string/id_label"
                android:inputType="textEmailAddress"
                android:paddingRight="30dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0"></Space>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/rounded_corners"
                android:drawableLeft="@drawable/ic_password"
                android:ems="10"
                android:hint="@string/password_label"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/white"
                android:text="@string/login_label" />

            <Space
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0"></Space>


            <TextView
                android:id="@+id/new_client_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/new_client_label"
                android:textColor="@color/design_default_color_on_primary" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>